[package]
name = "ocrs-cli"
version = "0.10.4"
edition = "2021"
authors = ["Robert Knight"]
description = "OCR CLI tool for extracting text from images"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robertknight/ocrs"
repository = "https://github.com/robertknight/ocrs"

[dependencies]
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "webp"] }
png = "0.18.0"
serde_json = "1.0.143"
rten = { workspace = true }
rten-imageproc = { workspace = true }
rten-tensor = { workspace = true }
ocrs = { path = "../ocrs", version = "0.10.4" }
lexopt = "0.3.1"
url = "2.5.4"
anyhow = "1.0.99"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "3.1.2"
home = "0.5.11"

[[bin]]
name = "ocrs"
path = "src/main.rs"

# Disable documentation for ocrs binary to avoid a filename conflict in
# `target/doc/` with docs for the ocrs library crate.
doc = false
