[package]
name = "wasnn-ocr"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.7.0"
wasnn = { path = "../" }
wasnn-imageproc = { path = "../wasnn-imageproc" }
wasnn-tensor = { path = "../wasnn-tensor" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"

[dev-dependencies]
fastrand = "1.9.0"

[lib]
crate-type = ["lib", "cdylib"]
